refactor: alteração da importação pelo html para o javascript

--- a/index.html
+++ b/index.html
@@ -11,6 +11,4 @@
 </body>
 </html>
 
-<script src="./js/app/controllers/main-page/MainPageController.js"></script>
-<script src="./js/app/views/pages/main-page/MainPage.js"></script>
-<script src="./js/index.js"></script>
+<script src="./js/index.js" type="module"></script>
