fix: submit com event funcionando
Para isso foi preciso realizar uma refatoração, deixando de usar os imports para o uso das
referenciações direto do html, além disso deixamos de usar a chamada do metodo submit no html e
passamos para o javascript.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Negociações</title>
-    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-theme.css">
-    
 </head>
 <body class="container">
     <div id="root"></div>
 </body>
 </html>
 
-<script src="./js/index.js" type="module"></script>
+<script src="./js/app/models/Negociacao.js"></script>
+<script src="./js/app/controllers/main-page/NegociacaoController.js"></script>
+<script src="./js/app/controllers/main-page/MainPageController.js"></script>
+<script src="./js/app/views/pages/main-page/NegociacoesView.js"></script>
+<script src="./js/index.js"></script>
