--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </html>
 
 <script src="./js/app/models/Negociacao.js"></script>
+<script src="./js/app/models/ListaNegociacoes.js"></script>
 <script src="./js/app/controllers/main-page/NegociacaoController.js"></script>
 <script src="./js/app/controllers/main-page/MainPageController.js"></script>
 <script src="./js/app/views/pages/main-page/NegociacoesView.js"></script>
