feat: implementação do botão de incluir, adicionando a negociacao na tabela e atualizando

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
 <script src="./js/app/models/ListaNegociacoes.js"></script>
 <script src="./js/app/controllers/main-page/NegociacaoController.js"></script>
 <script src="./js/app/controllers/main-page/MainPageController.js"></script>
-<script src="./js/app/views/pages/main-page/NegociacoesView.js"></script>
-<script src="./js/index.js"></script>
+<script src="./js/app/views/pages/main-page/MainPageView.js"></script>
+<script src="./js/app/views/components/TableView.js"></script>
+<script>
+    new MainPageController;
+</script>
