refactor: deslocamento de funções de view para um arquivo View

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 <script src="./js/app/models/Negociacao.js"></script>
 <script src="./js/app/models/ListaNegociacoes.js"></script>
 <script src="./js/app/controllers/main-page/NegociacaoController.js"></script>
-<script src="./js/app/controllers/main-page/MainPageController.js"></script>
 <script src="./js/app/views/pages/main-page/MainPageView.js"></script>
 <script src="./js/app/views/components/TableView.js"></script>
 <script>
-    new MainPageController;
+    new MainPageView;
 </script>
